# GameEngine

./: .gitignore  CMakeLists.txt  README.md
include/: AnimationSystem.h  Components.h  ECS.h  PhysicsSystem.h
src/: main.cpp
